[package]
name = "tfvar-export"
version = "0.1.0"
edition = "2021"
description = "Set Terraform Cloud variables across Projects and Workspaces from outputs of current workspace."

[dependencies]
clap = { version = "4.5.0", features = ["cargo"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
