[package]
name = "tfvar-export"
version = "0.1.0"
edition = "2021"
description = "Set Terraform Cloud variables across Projects and Workspaces from outputs of current workspace."

[dev-dependencies]
chrono = "0.4.38"
rand = "0.8.5"

[dependencies]
clap = { version = "4.5.0", features = ["cargo"] }
env_logger = "0.11"
log = "0.4"
ratelimit = "0.9.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
